tests/snapshots/writer_test__coordinate_boundary_values_antimeridian.snap
---
source: tests/writer_test.rs
expression: output
---
name,code,country,lat,lon,elev,style,rwdir,rwlen,rwwidth,freq,desc,userdata,pics
antimeridian,TST,XX,0000.000N,18000.000E,0m,0,,,,,,,
