tests/snapshots/writer_test__coordinate_boundary_values_south_pole.snap
---
source: tests/writer_test.rs
expression: output
---
name,code,country,lat,lon,elev,style,rwdir,rwlen,rwwidth,freq,desc,userdata,pics
south_pole,TST,XX,9000.000S,00000.000E,0m,0,,,,,,,
